Fix colab import issue.
Change-Id: Ie6429dca74ff4f32bdbe1ddd7b0b547f032c6b19

--- a/ai_metadata/colab/ai_metadata.ipynb
+++ b/ai_metadata/colab/ai_metadata.ipynb
@@ -1,22 +1,10 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [],
-   "toc_visible": true
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "intro_markdown"
+   },
    "source": [
     "# Content Metadata AI Toolkit 🚀\n",
     "\n",
@@ -30,13 +18,13 @@
     "**Prerequisites:**\n",
     "* A Google Account (to use Colab).\n",
     "* A Gemini API Key. You'll need to add this as a Colab Secret."
-   ],
-   "metadata": {
-    "id": "intro_markdown"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "setup_explanation"
+   },
    "source": [
     "## Step 0: One-Time Setup\n",
     "\n",
@@ -55,13 +43,19 @@
     "5.  Enable the toggle **Notebook access**.\n",
     "6.  Close the Secrets panel.\n",
     "7.  Now, run the code cell below."
-   ],
-   "metadata": {
-    "id": "setup_explanation"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "p_eKomM8vJ2n",
+    "outputId": "a1b2c3d4-e5f6-7890-1234-56789abcdef0"
+   },
+   "outputs": [],
    "source": [
     "#@title Step 0: Run Setup (Installs tools & configures API Key)\n",
     "\n",
@@ -83,14 +77,14 @@
     "!mkdir -p /content/uploads\n",
     "\n",
     "# Change directory to where the AI scripts are located\n",
-    "%cd /content/video-metadata-ai-toolkit/ai_metadata\n",
+    "%cd /content/video-metadata-ai-toolkit\n",
     "\n",
     "# Import necessary libraries\n",
     "import os\n",
     "import logging\n",
     "from google.colab import userdata, files\n",
-    "import ai_metadata_generator # Toolkit's main AI functions\n",
-    "import file_io             # Toolkit's file handling functions\n",
+    "from ai_metadata import ai_metadata_generator # Toolkit's main AI functions\n",
+    "from ai_metadata import file_io             # Toolkit's file handling functions\n",
     "\n",
     "# --- API Key Configuration ---\n",
     "print(\"Configuring API Key...\")\n",
@@ -112,19 +106,13 @@
     "logging.getLogger().setLevel(logging.CRITICAL)\n",
     "\n",
     "print(\"\\nSetup complete. You can now proceed to Step 1.\")"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "p_eKomM8vJ2n",
-    "outputId": "a1b2c3d4-e5f6-7890-1234-56789abcdef0"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "upload_explanation"
+   },
    "source": [
     "## Step 1: Upload Content File(s)\n",
     "\n",
@@ -133,13 +121,20 @@
     "* Click the \"Choose Files\" button that appears after running the cell.\n",
     "* Select one or more files from your computer.\n",
     "* **Note:** If you upload multiple files, the toolkit will treat them collectively as a *single* piece of content when generating metadata in the following steps."
-   ],
-   "metadata": {
-    "id": "upload_explanation"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 150
+    },
+    "id": "I25Mvgy1TiIJ",
+    "outputId": "b2c3d4e5-f6a7-8901-2345-6789abcdef01"
+   },
+   "outputs": [],
    "source": [
     "#@title Step 1: Upload Your File(s)\n",
     "\n",
@@ -175,31 +170,31 @@
     "\n",
     "# Clean up the dictionary holding file content in memory, as it's now saved to disk\n",
     "# del input_files_dict"
-   ],
-   "metadata": {
-    "id": "I25Mvgy1TiIJ",
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 150
-    },
-    "outputId": "b2c3d4e5-f6a7-8901-2345-6789abcdef01"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "titles_explanation"
+   },
    "source": [
     "## Step 2: Generate Suggested Titles\n",
     "\n",
     "This cell uses the AI to analyze your uploaded content and suggest relevant and engaging titles."
-   ],
-   "metadata": {
-    "id": "titles_explanation"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "o5ZFyRpmxzdZ",
+    "outputId": "c3d4e5f6-a7b8-9012-3456-789abcdef012"
+   },
+   "outputs": [],
    "source": [
     "#@title Step 2: Suggest Titles\n",
     "\n",
@@ -230,31 +225,31 @@
     "        print(\"\\nCleaning up resources...\")\n",
     "        for f in content_files:\n",
     "            f.cleanup()\n"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "o5ZFyRpmxzdZ",
-    "outputId": "c3d4e5f6-a7b8-9012-3456-789abcdef012",
-    "cellView": "form"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "summary_explanation"
+   },
    "source": [
     "## Step 3: Generate Content Summary\n",
     "\n",
     "This cell generates a concise summary of your content. The summary is intended for an external audience (e.g., a video description) and avoids spoilers."
-   ],
-   "metadata": {
-    "id": "summary_explanation"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellView": "form",
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "weH8IZdmfIX0",
+    "outputId": "d4e5f6a7-b8c9-0123-4567-89abcdef0123"
+   },
+   "outputs": [],
    "source": [
     "#@title Step 3: Summarize Content (Spoiler-Free)\n",
     "\n",
@@ -284,33 +279,32 @@
     "        print(\"\\nCleaning up resources...\")\n",
     "        for f in content_files:\n",
     "            f.cleanup()"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "outputId": "d4e5f6a7-b8c9-0123-4567-89abcdef0123",
-    "cellView": "form",
-    "id": "weH8IZdmfIX0"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "keywords_explanation"
+   },
    "source": [
     "## Step 4: Generate Keywords\n",
     "\n",
     "This cell suggests relevant keywords based on the content.\n",
     "\n",
     "* **Optional:** You can provide a comma-separated list of `allowed_keywords` below. If you do, the AI will only suggest keywords from that specific list."
-   ],
-   "metadata": {
-    "id": "keywords_explanation"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "thUjdSJVfeqK",
+    "outputId": "e5f6a7b8-c9d0-1234-5678-9abcdef01234"
+   },
+   "outputs": [],
    "source": [
     "#@title Step 4: Generate Keywords\n",
     "\n",
@@ -351,19 +345,13 @@
     "        print(\"\\nCleaning up resources...\")\n",
     "        for f in content_files:\n",
     "            f.cleanup()"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "outputId": "e5f6a7b8-c9d0-1234-5678-9abcdef01234",
-    "id": "thUjdSJVfeqK"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "keyvalue_explanation"
+   },
    "source": [
     "## Step 5: Generate Key-Values\n",
     "\n",
@@ -371,13 +359,19 @@
     "\n",
     "* **Required:** Enter the `key` you want to find values for (e.g., `mood`, `genre`, `topic`).\n",
     "* **Optional:** You can provide a comma-separated list of `allowed_values`. If you do, the AI will only suggest values from that specific list for the given key."
-   ],
-   "metadata": {
-    "id": "keyvalue_explanation"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "b2Ev7pgb3aon",
+    "outputId": "f6a7b8c9-d0e1-2345-6789-abcdef012345"
+   },
+   "outputs": [],
    "source": [
     "#@title Step 5: Generate Key-Values\n",
     "\n",
@@ -426,30 +420,30 @@
     "            print(\"\\nCleaning up resources...\")\n",
     "            for f in content_files:\n",
     "                f.cleanup()"
-   ],
-   "metadata": {
-    "id": "b2Ev7pgb3aon",
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "outputId": "f6a7b8c9-d0e1-2345-6789-abcdef012345"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "iab_explanation"
+   },
    "source": [
     "## Step 6: Generate IAB Content Categories\n",
     "\n",
     "This cell identifies relevant IAB Tech Lab Content Taxonomy categories (both Content and Audience taxonomies) for your content. This is useful for content classification and advertising purposes."
-   ],
-   "metadata": {
-    "id": "iab_explanation"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "6ARG4MdGdwY1",
+    "outputId": "0a1b2c3d-4e5f-6789-0123-456789abcdef"
+   },
+   "outputs": [],
    "source": [
     "#@title Step 6: Generate IAB Categories\n",
     "\n",
@@ -498,32 +492,29 @@
     "        print(\"\\nCleaning up resources...\")\n",
     "        for f in content_files:\n",
     "            f.cleanup()"
-   ],
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "outputId": "0a1b2c3d-4e5f-6789-0123-456789abcdef",
-    "id": "6ARG4MdGdwY1"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "finish_explanation"
+   },
    "source": [
     "## Finished!\n",
     "\n",
     "You have successfully generated metadata for your content. You can run the steps again with different files or parameters.\n",
     "\n",
     "*(Optional)* You can run the cell below to remove the files you uploaded from the `/content/uploads` directory if you no longer need them in this Colab session."
-   ],
-   "metadata": {
-    "id": "finish_explanation"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "id": "cleanup_code"
+   },
+   "outputs": [],
    "source": [
     "#@title (Optional) Clean Up Uploaded Files\n",
     "import shutil\n",
@@ -543,13 +534,22 @@
     "        print(f\"❌ Error removing directory {upload_dir}: {e}\")\n",
     "else:\n",
     "    print(f\"ℹ️ Directory {upload_dir} does not exist, no cleanup needed.\")"
-   ],
-   "metadata": {
-    "id": "cleanup_code",
-    "colab": {}
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": [],
+   "toc_visible": true
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
